--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1> Wellcome To</h1>
-    <h1>Sonali's World</h1>
+    <h1><span class="name-highlight">Sonali's</span> World</h1>
     <img src="images/laddu.png">
 </body>
 </html>
