--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Wellcome To</h1>
-    <h1><span class="name-highlight">Sonali's</span> World</h1>
-    <img src="images/laddu.png">
+    <section>
+        <div class="half-width">
+        <h1> Wellcome To</h1>
+        <h1><span class="name-highlight">Sonali's</span> World</h1>
+        <h3>My Career Objective</h3>
+        <p>A highly motivated and organized individual, with a master's degree who is capable of
+            working under pressure in all environments, seeking a position in your company.
+            Adequate professional skills and novel strategies would help your company flourish
+            and simultaneously improve my capabilities as a professional. Would like to add my
+            contribution to the betterment of the workplace through accurate skill and hardship.</p>
+        </div>
+    </section>
+    <div class="half-width"><img src="images/laddu.png"></div>
 </body>
 </html>
