--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             contribution to the betterment of the workplace through accurate skill and hardship.</p>
         </div>
     </section>
-    <div class="half-width"><img src="images/laddu.png"></div>
+    <div class="half-width"><img src="images/laddu4.jpg"></div>
 </body>
 </html>
