--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             and simultaneously improve my capabilities as a professional. Would like to add my
             contribution to the betterment of the workplace through accurate skill and hardship.</p>
             <a class="button" target="_blank" href="https://www.facebook.com/profile.php?id=100009482239089&sk=about"> Click Here</a>
+            <h3>Competencies</h3>
+            <p>Cope up with different Situations.</p>
+                <p>Ability to build relationships and set up trust.</p>
+                <p>Highly organized with a creative flair for project work.</p>
+                <p>Enthusiastic self-starter who contributes well to the team.</p>
         </div>
     </section>
     <div class="half-width"><img src="images/laddu4.jpg"></div>
