--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="half-width">
             <img src="images/laddu5.jpg" alt=""> </div>
 
-        <div class="half-width"> 
+        <div class="second-half-width"> 
         <h2>My Dreams</h2>  
         <h3>Famous Person In World</h3>  
         <p> Cope up with different Situations.Ability to build relationships and
