--- a/index.html
+++ b/index.html
@@ -41,9 +41,29 @@
              <a class="button" target="_blank" href="https://www.facebook.com/profile.php?id=100009482239089&sk=about"> Click Here</a>
         
         </div>
+</section>>
 
+<section class="exprience-area">
+    <h2> EXPRIENCE</h2>
+<div class="half-width">
+    <h2>EXPRIENCE</h2>
+    <h3><span class="name-highlight">we are the bast</span></h3>
+    <p>Cope up with different Situations.Ability to build relationships and
+        set up trust.Highly organized with a creative flair for project work.
+        Enthusiastic self-starter who contributes well to the team</p>
 
-    </section>>
+</div>
+
+<div class="half-width">
+    <h2>EXPRIENCE</h2>
+    <h3><span class="name-highlight">we are the bast</span></h3>
+    <p>Cope up with different Situations.Ability to build relationships and
+        set up trust.Highly organized with a creative flair for project work.
+        Enthusiastic self-starter who contributes well to the team</p>
+
+</div>
+
+</section>
 
 
 </body>
