--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="top-banner">
+        <section class="top-banner section-box">
             <div class="half-width">
             <h1> Wellcome To</h1>
             <h1><span class="name-highlight">Sonali's</span> World</h1>
@@ -28,11 +28,11 @@
         <div class="half-width"><img src="images/laddu4.jpg"></div>
     </section>
 
-    <section class="dream_area">
+    <section class="dream_area section-box">
         <div class="half-width">
             <img src="images/laddu5.jpg" alt=""> </div>
 
-        <div class="half-width"> 
+        <div class="half-width dream-padding"> 
         <h2>My Dreams</h2>  
         <h3>Famous Person In World</h3>  
         <p> Cope up with different Situations.Ability to build relationships and
@@ -45,19 +45,18 @@
 
 <section class="exprience-area">
     <h2> EXPRIENCE</h2>
-<div class="half-width">
-    <h2>EXPRIENCE</h2>
-    <h3><span class="name-highlight">we are the bast</span></h3>
-    <p>Cope up with different Situations.Ability to build relationships and
+<div class="half-width section-box shadow padding-r" id="full-stack">
+    <h2 class="text-right">EXPRIENCE</h2>
+    <h3 class="text-right"><span class="name-highlight">we are the bast</span></h3>
+    <p class="text-right">Cope up with different Situations.Ability to build relationships and
         set up trust.Highly organized with a creative flair for project work.
         Enthusiastic self-starter who contributes well to the team</p>
-
 </div>
 
-<div class="half-width">
-    <h2>EXPRIENCE</h2>
-    <h3><span class="name-highlight">we are the bast</span></h3>
-    <p>Cope up with different Situations.Ability to build relationships and
+<div class="half-width shadow padding-r" id="baby-web">
+    <h2 class="text-right">EXPRIENCE</h2>
+    <h3 class="text-right"><span class="name-highlight">we are the bast</span></h3>
+    <p class="text-right">Cope up with different Situations.Ability to build relationships and
         set up trust.Highly organized with a creative flair for project work.
         Enthusiastic self-starter who contributes well to the team</p>
 
@@ -65,6 +64,9 @@
 
 </section>
 
-
+<footer>
+    
+</footer>
 </body>
+
 </html>
