--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
              <a class="button" target="_blank" href="https://www.facebook.com/profile.php?id=100009482239089&sk=about"> Click Here</a>
         
         </div>
-</section>>
+</section>
 
 <section class="exprience-area">
     <h2> EXPRIENCE</h2>
-<div class="half-width section-box shadow padding-r" id="full-stack">
+    <div class="section-box">
+<div class="half-width shadow padding-r" id="full-stack">
     <h2 class="text-right">EXPRIENCE</h2>
     <h3 class="text-right"><span class="name-highlight">we are the bast</span></h3>
     <p class="text-right">Cope up with different Situations.Ability to build relationships and
@@ -65,7 +66,7 @@
 </section>
 
 <footer>
-    
+
 </footer>
 </body>
 
